update landing pages

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <h3>Kontak</h3>
           <ul class="contact-info">
             <li><i class="fas fa-envelope"></i> satulayananmks@gmail.com</li>
-            <li><i class="fas fa-phone"></i> 0851-6277-1309</li>
+            <li><i class="fas fa-phone"></i> +62 852-1669-7771</li>
             <li>
               <i class="fas fa-map-marker-alt"></i> Kota Makassar, Indonesia
             </li>
