update landing pages

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </p>
       <button id="learn-more">Pelajari Lebih Lanjut</button>
     </div>
+  
   </section>
 
   <!-- Bagian Fitur -->
@@ -237,11 +238,15 @@
 
       <div class="footer-section">
         <h3>Kontak</h3>
+       
         <ul class="contact-info">
           <li><i class="fas fa-envelope"></i> satulayananmks@gmail.com</li>
           <li><i class="fas fa-phone"></i> +62 852-1669-7771</li>
           <li>
             <i class="fas fa-map-marker-alt"></i> Kota Makassar, Indonesia
+          </li>
+          <li>
+            <a href="contact.html" class="detail-btn"> Send Email</a>
           </li>
         </ul>
       </div>
