--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
 
   <body>
@@ -82,6 +82,10 @@
               placeholder="Pesan"
             ></textarea>
           </div>
+          <div
+            class="g-recaptcha"
+            data-sitekey="6Ldo0MkqAAAAAIH_XudnL2TGySuliRlMVRj83vKZ"
+          ></div>
           <button type="submit" class="submit-btn">Kirim Pesan</button>
         </form>
       </div>
@@ -133,6 +137,8 @@
     </footer>
     <!-- Link ke file JavaScript -->
     <!-- Add before closing body tag -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/contact.js"></script>
   </body>
 </html>
