--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
               id="name"
               name="name"
               required
-              placeholder="Nama Lengkap"
+              placeholder="Nama Lengkap (*required)"
             />
           </div>
           <div class="form-group">
@@ -60,7 +60,7 @@
               id="email"
               name="email"
               required
-              placeholder="Email"
+              placeholder="Email (*required)"
             />
           </div>
           <div class="form-group">
@@ -69,7 +69,7 @@
               id="subject"
               name="subject"
               required
-              placeholder="Subjek"
+              placeholder="Subjek (*required)"
             />
           </div>
           <div class="form-group">
@@ -77,7 +77,7 @@
               id="message"
               name="message"
               required
-              placeholder="Pesan"
+              placeholder="Pesan (*required)"
             ></textarea>
           </div>
           <div
